--- a/northwind.console.sqlClient.App/northwind.console.sqlClient/northwind.console.sqlClient.csproj
+++ b/northwind.console.sqlClient.App/northwind.console.sqlClient/northwind.console.sqlClient.csproj
@@ -5,6 +5,14 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+    <PackageReference Include="System.Console" Version="4.3.1" />
+  </ItemGroup>
+  
+  
 
 </Project>
