--- a/northwind.console.sqlClient.App/northwind.console.sqlClient/northwind.console.sqlClient.csproj
+++ b/northwind.console.sqlClient.App/northwind.console.sqlClient/northwind.console.sqlClient.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,10 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
-    <PackageReference Include="System.Console" Version="4.3.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1" />
   </ItemGroup>
-  
-  
+
+  <ItemGroup>
+    <Using Include="System.Console" Static="true" />
+  </ItemGroup>
 
 </Project>
